# uniffi-rs

./: Cargo.toml
docker/: cargo-docker.sh
fixtures/ext-types-proc-macro/lib-ext/: Cargo.toml
fixtures/ext-types-proc-macro/lib-ext/src/: lib.rs
fixtures/ext-types-proc-macro/lib-ext2/: Cargo.toml
fixtures/ext-types-proc-macro/lib-ext2/src/: lib.rs
fixtures/ext-types-proc-macro/lib-main/: Cargo.toml  uniffi.toml
fixtures/ext-types-proc-macro/lib-main/src/: lib.rs
